--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
+  http_retry: ^0.2.0
+  flutter_hooks: ^0.18.5+1
+  flutter_redux: ^0.10.0
+  redux: ^5.0.0
 
 dev_dependencies:
   flutter_test:
